--- a/ZenithSociety/Views/Shared/_Layout.cshtml
+++ b/ZenithSociety/Views/Shared/_Layout.cshtml
@@ -24,6 +24,21 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>
+                        @if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole("Admin"))
+                        {
+                            @Html.ActionLink("Manage Activities", "Index", "Activities")
+                        }
+                    }</li>
+                    <li>@if (User.Identity.IsAuthenticated)
+                    {
+                        if (User.IsInRole("Admin"))
+                        {
+                            @Html.ActionLink("Manage Events", "Index", "Events")
+                        }
+                    }</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
