Refined Event and Activity models

--- a/ZenithSociety/Views/Events/Details.cshtml
+++ b/ZenithSociety/Views/Events/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.FirstName)
+            @Html.DisplayNameFor(model => model.ApplicationUser.UserName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.FirstName)
+            @Html.DisplayFor(model => model.ApplicationUser.UserName)
         </dd>
 
         <dt>
