--- a/ZenithSociety/Content/Site.css
+++ b/ZenithSociety/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+
+table{
+   width:100%;
+}
+
+table th{
+   background-color: #87e8e8;
+   color: #2c4355;
+   width: 100%;
+   text-align: center;
+   border: solid 1px #a1c7d0;
+}
+
+table td{
+   border: solid 1px #a1c7d0;
+}
+
+.mainh2 {
+    text-align: center;
+}
