--- a/ZenithSociety/Views/Events/Index.cshtml
+++ b/ZenithSociety/Views/Events/Index.cshtml
@@ -24,6 +24,9 @@
             @Html.DisplayNameFor(model => model.EndDate)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.CreationDate)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.IsActive)
         </th>
         <th></th>
@@ -42,6 +45,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EndDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CreationDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.IsActive)
