Edited lots of titles Max length for username, firstname, lastname, activity description

--- a/ZenithSociety/Views/Events/Index.cshtml
+++ b/ZenithSociety/Views/Events/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<ZenithDataLib.Models.Event>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Event List";
 }
 
-<h2>Index</h2>
+<h2>Event List</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
