--- a/ZenithSociety/Views/Activities/Delete.cshtml
+++ b/ZenithSociety/Views/Activities/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model ZenithDataLib.Models.Activity
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Activity";
 }
 
-<h2>Delete</h2>
+<h2>Delete Activity</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Activity</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
