--- a/ZenithSociety/Views/Activities/Details.cshtml
+++ b/ZenithSociety/Views/Activities/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model ZenithDataLib.Models.Activity
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Activity Details";
 }
 
-<h2>Details</h2>
+<h2>Activity Details</h2>
 
 <div>
-    <h4>Activity</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
